# storageapi/swagger.yml
@@ -2,7 +2,7 @@ swagger: "2.0"
 
 info:
   title: Storage
-  version: 1.5.0
+  version: 1.6.0
 
 basePath: /
 schemes:
@@ -41,6 +41,24 @@ definitions:
   Status:
     type: string
     enum: ["offline", "online"]
+
+  StatusCollectionReport:
+    type: object
+    properties:
+      stations:
+          type: array
+          items:
+            $ref: '#/definitions/CollectionReport'
+
+  CollectionReport:
+    type: object
+    properties:
+      id:
+          type: integer
+      money:
+          type: integer
+      ctime:
+          type: integer
     
   MoneyReport:
     type: object
@@ -156,6 +174,17 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/StatusReport'
+        500:
+          description: internal error
+
+  /status-collection:
+    get:
+      operationId: "statusCollection"
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/StatusCollectionReport'
         500:
           description: internal error
 
@@ -284,6 +313,22 @@ paths:
           description: OK
         500:
           description: internal error
+
+  /save-collection:
+    post:
+      operationId: "saveCollection"
+      parameters:
+        - name: args
+          required: true
+          in: body
+          schema:
+            $ref: '#definitions/CollectionReport'
+      responses:
+        204: 
+          description: OK
+        500:
+          description: internal error
+
   /load-money:
     post:
       operationId: "loadMoney"
